# capture

./: ASK.txt  Cargo.toml  README.md
src/: lib.rs  main.rs
src/canonical/: mod.rs  snapshot.rs
src/core/: mod.rs
src/cropper/: app.rs  config.rs  mod.rs
src/snapper/: mod.rs
src/ui/: mod.rs
