[package]
name = "capture"
authors = ["lopo<lopo@zju.edu.cn>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image"] }
image = "0.25.1"
xcap = "0.0.9"